[gd_scene load_steps=12 format=2]

[ext_resource path="res://Battle.gd" type="Script" id=1]
[ext_resource path="res://tiles/tileset.tres" type="TileSet" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://image/back.png" type="Texture" id=4]
[ext_resource path="res://image/fill.png" type="Texture" id=5]
[ext_resource path="res://image/ko.png" type="Texture" id=6]
[ext_resource path="res://image/ready.png" type="Texture" id=7]
[ext_resource path="res://image/fight.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "ko"
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "start"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect3:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "wait"
length = 2.0

[node name="Battle" type="Node"]
script = ExtResource( 1 )

[node name="World" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="World"]
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 15, 0, 0, 65536, 0, 0, 65551, 0, 0, 131072, 0, 0, 131087, 0, 0, 196608, 0, 0, 196623, 0, 0, 262144, 0, 0, 262159, 0, 0, 327680, 0, 0, 327695, 0, 0, 393216, 0, 0, 393231, 0, 0, 458752, 0, 0, 458767, 0, 0, 524288, 0, 0, 524303, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0 )

[node name="Position2D" type="Position2D" parent="World"]
position = Vector2( 294, 229 )

[node name="Position2D2" type="Position2D" parent="World"]
position = Vector2( 713, 233 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
editor/display_folded = true
margin_right = 1024.0
margin_bottom = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 510.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="TextureProgress" type="TextureProgress" parent="MarginContainer/HBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_right = 510.0
margin_bottom = 64.0
size_flags_horizontal = 3
max_value = 1000.0
value = 40.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
fill_mode = 1
nine_patch_stretch = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="TextureProgress2" type="TextureProgress" parent="MarginContainer/HBoxContainer/HBoxContainer2"]
margin_right = 442.0
margin_bottom = 64.0
size_flags_horizontal = 3
max_value = 1000.0
value = 40.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer2"]
margin_left = 446.0
margin_right = 510.0
margin_bottom = 64.0
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
autoplay = "start"
anims/ko = SubResource( 1 )
anims/start = SubResource( 2 )
anims/wait = SubResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 7 )
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="."]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 8 )
stretch_mode = 4
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
